--- a/src/app/admin/header/header.component.html
+++ b/src/app/admin/header/header.component.html
@@ -1,13 +1,12 @@
 <header
-  class="bg-green-100 shadow-md py-4 px-8 flex items-center justify-between"
+  class="bg-blue-50 shadow-md py-4 px-8 flex items-center justify-between"
 >
-  <div class="text-lg font-semibold text-green-800 flex items-center">
+  <div class="text-lg font-semibold text-blue-800 flex items-center">
     <img
       src="../../assets/logo.png"
       alt="GainNest Logo"
       class="w-10 h-10 mr-2"
     />
-
     GainNest Dashboard
   </div>
   <div class="flex items-center space-x-4">
@@ -52,9 +51,9 @@
     </div>
     <div
       *ngIf="dropdownOpen"
-      class="absolute right-0 top-12 mt-2 w-32 bg-gray-100 text-gray rounded-md shadow-lg"
+      class="absolute right-0 top-12 mt-2 w-32 bg-white text-gray-700 rounded-md shadow-lg"
     >
-      <a (click)="logout()" class="block px-4 py-2 hover:text-green-400"
+      <a (click)="logout()" class="block px-4 py-2 hover:text-blue-600"
         >Logout</a
       >
     </div>
