--- a/src/app/admin/order-management/order-management.component.html
+++ b/src/app/admin/order-management/order-management.component.html
@@ -5,32 +5,45 @@
   <aside class="w-1/4 bg-white p-6 border-r">
     <div class="flex flex-col space-y-4">
       <button
-        class="bg-gray-200 py-3 px-4 text-left rounded-lg text-gray-700 font-semibold hover:bg-blue-100 focus:outline-none hover:text-green-400"
+        class="bg-blue-50 py-3 px-4 text-left rounded-lg text-gray-700 font-semibold hover:bg-blue-100 focus:outline-none hover:text-blue-800"
       >
         Dashboard
       </button>
       <a
         routerLink="/userList"
-        class="bg-gray-100 py-3 px-4 text-left rounded-lg text-gray-500 font-semibold hover:bg-blue-100 focus:outline-none hover:text-green-400"
+        class="bg-blue-100 py-3 px-4 text-left rounded-lg text-gray-500 font-semibold hover:bg-blue-100 focus:outline-none hover:text-blue-800"
       >
         Users
       </a>
       <a
-        routerLink="/stockList"
-        class="bg-gray-100 py-3 px-4 text-left rounded-lg text-gray-500 font-semibold hover:bg-blue-100 focus:outline-none hover:text-green-400"
+        routerLink="/list"
+        class="bg-blue-50 py-3 px-4 text-left rounded-lg text-gray-500 font-semibold hover:bg-blue-100 focus:outline-none hover:text-blue-800"
       >
         Stocks
       </a>
       <button
         routerLink="/ordermanagement"
-        class="bg-gray-100 py-3 px-4 text-left rounded-lg text-gray-500 font-semibold hover:bg-blue-100 focus:outline-none hover:text-green-400"
+        class="bg-blue-50 py-3 px-4 text-left rounded-lg text-gray-500 font-semibold hover:bg-blue-100 focus:outline-none hover:text-blue-800"
       >
         Order Management
       </button>
       <button
-        class="bg-gray-100 py-3 px-4 text-left rounded-lg text-gray-500 font-semibold hover:bg-blue-100 focus:outline-none hover:text-green-400"
+        routerLink="/allTransactions"
+        class="bg-blue-50 py-3 px-4 text-left rounded-lg text-gray-500 font-semibold hover:bg-blue-100 focus:outline-none hover:text-blue-800"
       >
         Transactions
+      </button>
+      <button
+        routerLink="/transactions"
+        class="bg-blue-50 py-3 px-4 text-left rounded-lg text-gray-500 font-semibold hover:bg-blue-100 focus:outline-none hover:text-blue-800"
+      >
+        Transaction Fees
+      </button>
+      <button
+        routerLink="/limit"
+        class="bg-blue-50 py-3 px-4 text-left rounded-lg text-gray-500 font-semibold hover:bg-blue-100 focus:outline-none hover:text-blue-800"
+      >
+        Set Limits
       </button>
     </div>
   </aside>
@@ -47,7 +60,7 @@
         <p class="text-sm text-gray-500">Buy/Sell at a specified price.</p>
         <button
           routerLink="/limitorders"
-          class="mt-4 bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 focus:outline-none"
+          class="mt-4 bg-blue-800 text-white py-2 px-4 rounded-lg hover:bg-blue-600 focus:outline-none"
         >
           Manage Limit Orders
         </button>
@@ -61,7 +74,7 @@
         </p>
         <button
           routerLink="/marketorders"
-          class="mt-4 bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 focus:outline-none"
+          class="mt-4 bg-blue-800 text-white py-2 px-4 rounded-lg hover:bg-blue-600 focus:outline-none"
         >
           Manage Market Orders
         </button>
@@ -75,7 +88,7 @@
         </p>
         <button
           routerLink="/stoporders"
-          class="mt-4 bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 focus:outline-none"
+          class="mt-4 bg-blue-800 text-white py-2 px-4 rounded-lg hover:bg-blue-600 focus:outline-none"
         >
           Manage Stop Orders
         </button>
@@ -83,7 +96,7 @@
     </div>
 
     <!-- Order Matching Engine -->
-    <div class="bg-indigo-50 p-6 rounded-lg shadow-md mb-6">
+    <!-- <div class="bg-indigo-50 p-6 rounded-lg shadow-md mb-6">
       <h3 class="text-lg font-semibold text-gray-800 mb-4">
         Order Matching Engine
       </h3>
@@ -97,13 +110,8 @@
         >
           View Matched Orders
         </button>
-        <button
-          class="bg-yellow-500 text-white py-2 px-4 rounded-lg hover:bg-yellow-600 focus:outline-none"
-        >
-          Adjust Matching Settings
-        </button>
       </div>
-    </div>
+    </div> -->
 
     <!-- Order Execution Section -->
     <div class="bg-indigo-50 p-6 rounded-lg shadow-md">
@@ -118,7 +126,7 @@
         <button
           class="py-2 px-4 rounded-lg"
           [ngClass]="{
-            'bg-blue-500 text-white': currentFilter === 'PENDING',
+            'bg-blue-800 text-white': currentFilter === 'PENDING',
             'bg-gray-200 hover:bg-gray-300': currentFilter !== 'PENDING'
           }"
           (click)="filterOrders('PENDING')"
@@ -128,7 +136,7 @@
         <button
           class="py-2 px-4 rounded-lg"
           [ngClass]="{
-            'bg-blue-500 text-white': currentFilter === 'COMPLETED',
+            'bg-blue-800 text-white': currentFilter === 'COMPLETED',
             'bg-gray-200 hover:bg-gray-300': currentFilter !== 'COMPLETED'
           }"
           (click)="filterOrders('COMPLETED')"
@@ -138,7 +146,7 @@
         <button
           class="py-2 px-4 rounded-lg"
           [ngClass]="{
-            'bg-blue-500 text-white': currentFilter === 'FAILED',
+            'bg-blue-800 text-white': currentFilter === 'FAILED',
             'bg-gray-200 hover:bg-gray-300': currentFilter !== 'FAILED'
           }"
           (click)="filterOrders('FAILED')"
@@ -173,7 +181,7 @@
         <tbody>
           <tr *ngFor="let order of filteredOrders; let index = index">
             <td class="py-3 px-4">{{ index + 1 }}</td>
-            <td class="py-3 px-4">{{ order.stock.symbol }}</td>
+            <td class="py-3 px-4">{{ order.stock?.symbol }}</td>
             <td class="py-3 px-4">{{ order.type }}</td>
             <td
               class="py-3 px-4"
