--- a/src/app/admin/view-details/view-details.component.html
+++ b/src/app/admin/view-details/view-details.component.html
@@ -5,36 +5,48 @@
   <aside class="w-1/4 bg-white p-6 border-r">
     <div class="flex flex-col space-y-4">
       <button
-        class="bg-gray-200 py-3 px-4 text-left rounded-lg text-gray-700 font-semibold hover:bg-blue-100 focus:outline-none hover:text-green-400"
+        class="bg-blue-50 py-3 px-4 text-left rounded-lg text-gray-700 font-semibold hover:bg-blue-100 focus:outline-none hover:text-blue-800"
       >
         Dashboard
       </button>
       <a
         routerLink="/userList"
-        class="bg-gray-100 py-3 px-4 text-left rounded-lg text-gray-500 font-semibold hover:bg-blue-100 focus:outline-none hover:text-green-400"
+        class="bg-blue-100 py-3 px-4 text-left rounded-lg text-gray-500 font-semibold hover:bg-blue-100 focus:outline-none hover:text-blue-800"
       >
         Users
       </a>
       <a
-        routerLink="/stockList"
-        class="bg-gray-100 py-3 px-4 text-left rounded-lg text-gray-500 font-semibold hover:bg-blue-100 focus:outline-none hover:text-green-400"
+        routerLink="/list"
+        class="bg-blue-50 py-3 px-4 text-left rounded-lg text-gray-500 font-semibold hover:bg-blue-100 focus:outline-none hover:text-blue-800"
       >
         Stocks
       </a>
       <button
         routerLink="/ordermanagement"
-        class="bg-gray-100 py-3 px-4 text-left rounded-lg text-gray-500 font-semibold hover:bg-blue-100 focus:outline-none hover:text-green-400"
+        class="bg-blue-50 py-3 px-4 text-left rounded-lg text-gray-500 font-semibold hover:bg-blue-100 focus:outline-none hover:text-blue-800"
       >
         Order Management
       </button>
       <button
-        class="bg-gray-100 py-3 px-4 text-left rounded-lg text-gray-500 font-semibold hover:bg-blue-100 focus:outline-none hover:text-green-400"
+        routerLink="/allTransactions"
+        class="bg-blue-50 py-3 px-4 text-left rounded-lg text-gray-500 font-semibold hover:bg-blue-100 focus:outline-none hover:text-blue-800"
       >
         Transactions
       </button>
+      <button
+        routerLink="/transactions"
+        class="bg-blue-50 py-3 px-4 text-left rounded-lg text-gray-500 font-semibold hover:bg-blue-100 focus:outline-none hover:text-blue-800"
+      >
+        Transaction Fees
+      </button>
+      <button
+        routerLink="/limit"
+        class="bg-blue-50 py-3 px-4 text-left rounded-lg text-gray-500 font-semibold hover:bg-blue-100 focus:outline-none hover:text-blue-800"
+      >
+        Set Limits
+      </button>
     </div>
   </aside>
-
   <!-- Main Content for View Order Execution Details -->
   <main class="flex-1 p-6 bg-gray-50">
     <h1 class="text-2xl font-bold text-gray-800 mb-4">
@@ -151,7 +163,7 @@
       </div>
     </div>
 
-    <!-- Trade Partner Details Section -->
+    <!-- Trade Partner Details Section
     <div class="bg-indigo-50 p-6 rounded-lg shadow-md mb-6">
       <h2 class="text-lg font-semibold text-gray-800">Trade Partner Details</h2>
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
@@ -180,10 +192,10 @@
           />
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Audit Trail Section -->
-    <div class="bg-indigo-50 p-6 rounded-lg shadow-md mb-6">
+    <!-- <div class="bg-indigo-50 p-6 rounded-lg shadow-md mb-6">
       <h2 class="text-lg font-semibold text-gray-800">Audit Trail</h2>
       <div class="overflow-x-auto">
         <table class="w-full text-left table-auto">
@@ -219,6 +231,6 @@
           </tbody>
         </table>
       </div>
-    </div>
+    </div> -->
   </main>
 </div>
