--- a/src/app/user/user-header/user-header.component.html
+++ b/src/app/user/user-header/user-header.component.html
@@ -1,4 +1,6 @@
-<nav class="bg-gray-900 text-white px-4 py-2 flex items-center justify-between">
+<nav
+  class="bg-gray-900 text-gray-300 flex items-center justify-between px-8 py-4"
+>
   <!-- Logo Section -->
   <div class="flex items-center space-x-4">
     <img
@@ -10,7 +12,7 @@
   </div>
 
   <!-- Centered Navigation Links -->
-  <ul class="flex-grow flex justify-center space-x-6">
+  <ul class="flex space-x-6">
     <li>
       <a href="#" class="text-green-400 font-semibold">Home</a>
     </li>
@@ -27,7 +29,7 @@
       <a href="#" class="hover:text-green-400">Orders</a>
     </li>
     <li>
-      <a href="#" class="hover:text-green-400">Money</a>
+      <a routerLink="/transactionhistory" class="hover:text-green-400">Money</a>
     </li>
   </ul>
 
