--- a/src/app/user/order-listing/order-listing.component.html
+++ b/src/app/user/order-listing/order-listing.component.html
@@ -208,7 +208,7 @@
               ></path>
             </svg>
           </div>
-          <button
+          <!-- <button
             class="px-4 py-2 bg-slate-100 text-slate-700 rounded-lg hover:bg-slate-200 transition-colors duration-200 border border-slate-300"
           >
             <svg
@@ -225,7 +225,7 @@
               ></path>
             </svg>
             Filter
-          </button>
+          </button> -->
         </div>
       </div>
 
