--- a/src/app/user/user-stock-list/user-stock-list.component.html
+++ b/src/app/user/user-stock-list/user-stock-list.component.html
@@ -38,7 +38,7 @@
             <div class="flex items-center justify-between">
               <h2 class="text-lg font-semibold text-slate-900">Stocks</h2>
               <div class="flex items-center space-x-3">
-                <button
+                <!-- <button
                   class="text-slate-500 hover:text-slate-700 text-sm font-medium"
                 >
                   <svg
@@ -55,8 +55,8 @@
                     ></path>
                   </svg>
                   Filter
-                </button>
-                <button
+                </button> -->
+                <!-- <button
                   class="text-slate-500 hover:text-slate-700 text-sm font-medium"
                 >
                   <svg
@@ -73,7 +73,7 @@
                     ></path>
                   </svg>
                   Export
-                </button>
+                </button> -->
               </div>
             </div>
           </div>
